--- a/src/ServiceStatus.Core.DependencyInjection/ServiceStatus.Core.DependencyInjection.csproj
+++ b/src/ServiceStatus.Core.DependencyInjection/ServiceStatus.Core.DependencyInjection.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ServiceStatus.Core\ServiceStatus.Core.csproj" />
+  </ItemGroup>
+
 </Project>
