--- a/src/ServiceStatus.Core/ServiceStatus.Core.csproj
+++ b/src/ServiceStatus.Core/ServiceStatus.Core.csproj
@@ -3,6 +3,12 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <Company>CCP hf</Company>
+    <Authors>CCP hf</Authors>
+    <Version>1.0.0</Version>
+    <PackageProjectUrl>https://github.com/ccpgames/ServiceStatus.Core</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/ccpgames/ServiceStatus.Core</RepositoryUrl>
+    <PackageTags>Service Status</PackageTags>
   </PropertyGroup>
 
   <ItemGroup>
