--- a/travis.yml
+++ b/travis.yml
@@ -2,7 +2,7 @@ language: csharp
 mono: none
 dotnet: 2.1.4
 before_install:
-  - export PROJECT_LOCATION=./src/EVEOnline.Articles.Feed/
+  - export PROJECT_LOCATION=./src/
 install:
   - dotnet restore $PROJECT_LOCATION -v minimal
 script:
