--- a/src/ServiceStatus.Core.Sql/ServiceStatus.Core.Sql.csproj
+++ b/src/ServiceStatus.Core.Sql/ServiceStatus.Core.Sql.csproj
@@ -8,6 +8,9 @@
     <PackageProjectUrl>https://github.com/ccpgames/ServiceStatus.Core</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ccpgames/ServiceStatus.Core</RepositoryUrl>
     <PackageTags>Service Status</PackageTags>
+    <PackageLicenseUrl>https://github.com/ccpgames/ServiceStatus.Core/blob/master/LICENSE</PackageLicenseUrl>
+    <Copyright>CCP hf</Copyright>
+    <Description>Standardizes and simplifies the addition of a service status endpoint on web sites, or APIs. Adds support for SQL Server.</Description>
   </PropertyGroup>
 
   <ItemGroup>
