--- a/src/ServiceStatus.Core.AspNet/ServiceStatus.Core.AspNet.csproj
+++ b/src/ServiceStatus.Core.AspNet/ServiceStatus.Core.AspNet.csproj
@@ -1,22 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
   <PropertyGroup>
-    <LangVersion>latest</LangVersion>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFrameworks>netcoreapp3.1;net5.0</TargetFrameworks>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <Company>CCP hf</Company>
-    <Authors>CCP hf</Authors>
-    <PackageProjectUrl>https://github.com/ccpgames/ServiceStatus.Core</PackageProjectUrl>
-    <RepositoryUrl>https://github.com/ccpgames/ServiceStatus.Core</RepositoryUrl>
     <PackageTags>Service Status ASP.NET Core</PackageTags>
-    <PackageLicenseUrl>https://github.com/ccpgames/ServiceStatus.Core/blob/master/LICENSE</PackageLicenseUrl>
-    <Copyright>CCP hf</Copyright>
-    <Description>Standardizes and simplifies the addition of a service status endpoint on web sites, or APIs.</Description>
   </PropertyGroup>
 
-  <ItemGroup>
-    <FrameworkReference Include="Microsoft.AspNetCore.App" />
-  </ItemGroup>
+	<ItemGroup>
+		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\ServiceStatus.Core\ServiceStatus.Core.csproj" />
